force-app/zurich-base/main/default/objects/Escalation_Setting__mdt/Escalation_Setting__mdt.object-meta.xml
<CustomObject>
    <label>Escalation Setting</label>
    <pluralLabel>Escalation Settings</pluralLabel>
</CustomObject>