force-app/zurich-base/main/default/objects/Escalation_Setting__mdt/fields/Area__c.field-meta.xml
<CustomField>
    <fullName>Area__c</fullName>
    <label>Area</label>
    <length>180</length>
    <required>true</required>
    <type>Text</type>
</CustomField>