force-app/zurich-base/main/default/objects/Escalation_Setting__mdt/fields/Cola__c.field-meta.xml
<CustomField>
    <fullName>Cola__c</fullName>
    <label>Cola</label>
    <length>180</length>
    <required>true</required>
    <type>Text</type>
</CustomField>