force-app/zurich-base/main/default/objects/Escalation_Setting__mdt/fields/PendienteDe__c.field-meta.xml
<CustomField>
    <fullName>PendienteDe__c</fullName>
    <label>Pendiente de</label>
    <length>180</length>
    <required>true</required>
    <type>Text</type>
</CustomField>