force-app/zurich-base/main/default/objects/Escalation_Setting__mdt/fields/queueApiName__c.field-meta.xml
<CustomField>
    <fullName>queueApiName__c</fullName>
    <label>queueApiName</label>
    <length>180</length>
    <required>true</required>
    <type>Text</type>
</CustomField>