force-app/zurich-base/main/default/objects/Escalation_Setting__mdt/fields/TipoDeEscalado__c.field-meta.xml
<CustomField>
    <fullName>TipoDeEscalado__c</fullName>
    <label>Tipo de Escalado</label>
    <length>25</length>
    <required>true</required>
    <type>Text</type>
</CustomField>