force-app/zurich-base/main/default/objects/Escalation_Setting__mdt/fields/TipoEscalado__c.field-meta.xml
<CustomField>
    <fullName>TipoEscalado__c</fullName>
    <label>Tipo Escalado</label>
    <length>25</length>
    <required>true</required>
    <type>Text</type>
</CustomField>